<?xml version="1.0" encoding="utf-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
	 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <!-- coordinates for model and artifact -->
  <modelVersion>4.0.0</modelVersion>


  <!-- The Basics -->
  <groupId>eu.simuline</groupId>
  <artifactId>SUtils</artifactId>
  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>

  <!-- information for generating a site -->
  <name>SUtils</name>
  <description>
    Utilities used in simuline.
  </description>

  <url>http://www.simuline.eu/SUtils/</url><!-- same as site-deploy -->
  <inceptionYear>2021</inceptionYear>
  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
      <comments>A business-friendly OSS license</comments>
    </license>
  </licenses>

  <organization>
    <name>Simuline Organization (l2r)</name>
    <url>http://www.simuline.eu</url>
  </organization>

  <developers>
    <developer>
      <id>ereissner</id>
      <name>Ernst Reissner</name>
      <email>ernst.reissner at simuline dot eu</email>
      <organization>l2r</organization>
      <organizationUrl>https://www.simuline.eu</organizationUrl>
      <timezone>Europe/Berlin</timezone>
      <properties>
        <picUrl>http://www.simuline.eu/Gluck_0001.gif</picUrl>
      </properties>
    </developer>
  </developers>

  <!-- source repositories: at the moment not needed. -->
  <repositories>
    <repository>
      <id>publicRepoAtSimuline</id>
      <url>https://www.simuline.eu/RepositoryMaven</url>
    </repository>
  </repositories>

  <!--scm>
    <connection>
      scm:git:https://github.com/Reissner/maven-latex-plugin.git
    </connection>
    <developerConnection>
      scm:git:https://github.com/Reissner/maven-latex-plugin.git
    </developerConnection>
    <url>https://github.com/Reissner/maven-latex-plugin</url>
    <tag>latex-maven-plugin-1.3</tag>
  </scm-->

 <distributionManagement><!-- For authentication see ~/.m2/settings.xml -->
    <site>
      <id>publicSiteAtSimuline</id>
      <url>ftp://www.simuline.eu/public_html/SUtils</url>
    </site>

    <repository>
      <id>publicRepoAtSimuline</id>
      <url>ftp://www.simuline.eu/public_html/RepositoryMaven</url>
    </repository>
  </distributionManagement>


  <mailingLists>
    <!--mailingList>
      <name>maven-latex-plugin Users</name>
      <archive>http://groups.google.com/group/maven-latex-plugin-users</archive>
      <post>maven-latex-plugin-users@googlegroups.com</post>
      <subscribe>maven-latex-plugin-users+subscribe@googlegroups.com</subscribe>
      <unsubscribe>maven-latex-plugin-users+unsubscribe@googlegroups.com</unsubscribe>
    </mailingList-->
  </mailingLists>

  <!--issueManagement>
    <system>Github Issues</system>
    <url>https://github.com/akquinet/maven-latex-plugin/issues</url>
    </issueManagement-->

  <properties>
    <!-- checked during validation -->
    <versionMvn>3.6.3</versionMvn>
    <!-- Using platform encoding to copy filtered resources; 
    without project.build.sourceEncoding the build is platform dependent! -->
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>eu.simuline</groupId>
      <artifactId>TestHelpers</artifactId>
      <version>1.1-SNAPSHOT</version>
      <!-- with this use goal test-javadoc instead of javadoc -->
      <scope>test</scope>
    </dependency>

     <dependency>
      <groupId>net.sourceforge.findbugs</groupId>
      <artifactId>annotations</artifactId>
      <version>1.3.2</version>
      <!--scope>provided</scope-->
    </dependency>

  </dependencies>


  <build>

    <extensions>
      <extension>
        <groupId>org.apache.maven.wagon</groupId>
        <artifactId>wagon-ftp</artifactId>
        <version>3.3.2</version>
      </extension>
      <extension>
        <groupId>org.apache.maven.wagon</groupId>
        <artifactId>wagon-file</artifactId>
        <version>3.3.2</version>
      </extension>
      <extension>
        <groupId>org.apache.maven.wagon</groupId>
        <artifactId>wagon-http</artifactId>
        <version>3.3.2</version>
      </extension>
    </extensions>

    <plugins>
      <!-- at the moment just to enforce maven version
	   use as mvn validate not as mvn enforcer:enforce
	   TBD: add a lot of tests -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>3.0.0-M3</version>
        <executions>
          <execution>
            <id>enforce-maven</id>
	    <phase>validate</phase>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireMavenVersion>
                  <version>${versionMvn}</version>
		  <message>
		    Invalid Maven version. It should, at least, be ${versionMvn}
		  </message>
                </requireMavenVersion>
		<requireJavaVersion>
		  <version>11</version>
		</requireJavaVersion>
		<!--dependencyConvergence/--><!-- this fails because of plugin-api -->
              </rules>    
            </configuration>
          </execution>
        </executions>
      </plugin>


      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>2.5.3</version>
      </plugin>
      
      <!-- configuration for clean plugin -->
      <plugin>
        <artifactId>maven-clean-plugin</artifactId>
        <version>3.1.0</version>
      </plugin>

     <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
	<version>3.8.0</version>
	<configuration>
 	  <compilerArgs>
	    <arg>-g</arg>
  	    <arg>-Xlint:unchecked</arg>
	  </compilerArgs>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>



            <!-- javadoc plugin -->
      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.1.0</version>
        <configuration>
	  <breakiterator>true</breakiterator>
	  <show>private</show>
	  <source>1.8</source>
	</configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M1</version><!-- not up to date: gtM5 -->
        <configuration>
          <trimStackTrace>false</trimStackTrace>
          <systemPropertyVariables>
            <!--testResourcesDir>${project.testResources}</testResourcesDir-->
            <testResourcesDir>src/test/resources/</testResourcesDir>
            <buildDirectory>${project.build.directory}</buildDirectory>
          </systemPropertyVariables>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-site-plugin</artifactId>
        <version>3.7.1</version>
        <configuration>
          <locales>en</locales>
        </configuration>
      </plugin>

   </plugins>
    </build>



  <reporting>
    <plugins>
      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-project-info-reports-plugin</artifactId>
        <version>3.0.0</version>
        <configuration>
          <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
        </configuration>
      </plugin>


    

             <!-- offers also command line analysis:
      mvn versions:display-plugin-updates
      mvn versions:display-dependency-updates
      mvn versions:display-property-updates
      -->
      <plugin>
	<groupId>org.codehaus.mojo</groupId>
	<artifactId>versions-maven-plugin</artifactId>
	<!-- TBD: uniform version -->
	<version>2.7</version>
	<reportSets>
	  <reportSet>
	    <reports>
	      <report>dependency-updates-report</report>
	      <report>plugin-updates-report</report>
	      <report>property-updates-report</report>
	    </reports>
	  </reportSet>
	</reportSets>
      </plugin>


    <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-report-plugin</artifactId>
        <version>3.0.0-M1</version><!-- not up to date: gtM3 -->
        <reportSets />
      </plugin>
      <!--plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>cobertura-maven-plugin</artifactId>
          <version>2.7</version>
          </plugin-->

      <!-- changes plugin: src/changes/changes.xml -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-changes-plugin</artifactId>
        <version>2.12.1</version>
        <reportSets>
          <reportSet>
            <reports>
              <report>changes-report</report>
            </reports>
          </reportSet>
        </reportSets>
       </plugin>


      
    </plugins>
  </reporting>

</project>
